# ai-dropshipping

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  schemas.py
app/api/: deps.py  routes.py
app/content/: competitive.py  generator.py  prompts.py  segments.py  variations.py
app/llm/: anthropic_client.py  base.py
app/pricing/: engine.py
app/scoring/: engine.py
data/: sample_products.json
docs/plans/: 2026-04-28-phase1-implementation.md  2026-04-28-phase2-implementation.md  2026-04-28-phase3-implementation.md
docs/specs/: 2026-04-28-phase1-design.md  2026-04-28-phase2-design.md  2026-04-28-phase3-design.md
scripts/: smoke.py
tests/: conftest.py  test_api.py  test_competitive.py  test_generator.py  test_pricing.py  test_scoring.py  test_segments.py  test_variations.py
